--- a/toy-crypto.opam
+++ b/toy-crypto.opam
@@ -1,16 +1,14 @@
 opam-version: "1.2"
 name: "toy-crypto"
-version: "0.6"
+version: "0.6.1"
 maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
 authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
 homepage: "https://github.com/ghuysmans/toy-crypto/"
 bug-reports: "https://github.com/ghuysmans/toy-crypto/issues"
 dev-repo: "https://github.com/ghuysmans/toy-crypto/"
-build: [
-  [make]
-]
+build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
-  "ocamlfind"
+  "dune" {build}
   "base-num"
   "ppx_deriving_yojson"
   "cmdliner"
