--- a/toy-crypto.opam
+++ b/toy-crypto.opam
@@ -1,6 +1,6 @@
 opam-version: "1.2"
 name: "toy-crypto"
-version: "0.6.1"
+version: "0.6.2"
 maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
 authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
 homepage: "https://github.com/ghuysmans/toy-crypto/"
@@ -12,4 +12,5 @@ depends: [
   "base-num"
   "ppx_deriving_yojson"
   "cmdliner"
+  "num-jsoo"
 ]
