--- a/web/dune
+++ b/web/dune
@@ -1,5 +1,5 @@
 (executable
  (name client)
  (modes js)
- (libraries toy_crypto js_of_ocaml)
- (preprocess (pps js_of_ocaml-ppx ppx_deriving_yojson)))
+ (libraries toy_crypto js_of_ocaml num-jsoo)
+ (preprocess (pps js_of_ocaml-ppx)))
